# llm_translate

./: .env.local  .gitignore  pyproject.toml
.docs/: diff01.txt
.docs/issue/: issue02.md  issue03.md  issue04.draftmd  issue04.md
.docs/pr/: pr03.md  pr04.md
data/json/: 001.json  002.json  003.json  004.json  005.json  006.json
data/json/en/: city.json  country.json
src/llm_translate/application/: __init__.py  config.py  translate.py
src/llm_translate/application/select/: json_usecase.py
src/llm_translate/domain/: __init__.py  prompt.py  types.py
src/llm_translate/infra/: __init__.py  environment.py  filesys.py  root.py
src/llm_translate/presentation/: __init__.py  main.py
src/llm_translate/presentation/cli/: select_json.py
tests/application/select/: test_json_usecase.py
tests/infra/: test_require.py
