[project]
name = "llm-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Takanashi", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "openai>=2.24.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]



[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
